--- a/postgresqlDemoApp/src/main/resources/application.yaml
+++ b/postgresqlDemoApp/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 spring:
   primary:
     datasource:
-      password: mysecretpassword
+      password: postgres
       username: postgres
       driver: org.postgresql.Driver
       url: jdbc:postgresql://192.168.0.12:5432/postgres
   replica:
     datasource:
-      password: mysecretpassword
+      password: postgres
       username: postgres
       driver: org.postgresql.Driver
       url: jdbc:postgresql://192.168.0.12:5432/postgres
