Fixed the issue with the client mode

--- a/ftpClient/docker-compose.yaml
+++ b/ftpClient/docker-compose.yaml
@@ -11,21 +11,20 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
   ftp-server:
-#    image: delfer/alpine-ftp-server
-#    ports:
-#      - "21:21"
-#      - 21000-21010:21000-21010
-#    environment:
-#      - USERS=demo|mysecretpassword123|/home/demo
-#      - ADDRESS=localhost
-    image: garethflowers/ftp-server
+    image: delfer/alpine-ftp-server
     ports:
       - '20-21:20-21/tcp'
-      - '40000-40009:40000-40009/tcp'
       - '21000-21010:21000-21010/tcp'
     environment:
-      - FTP_PASS=mysecretpassword123
-      - FTP_USER=demo
+      - USERS=demo|mysecretpassword123|/home/demo
+      - ADDRESS=192.168.0.12
+#    image: garethflowers/ftp-server
+#    ports:
+#      - '20-21:20-21/tcp'
+#      - '21000-21010:21000-21010/tcp'
+#    environment:
+#      - FTP_PASS=mysecretpassword123
+#      - FTP_USER=demo
     volumes:
       - ftp:/home/demo
 volumes:
