--- a/ftpClient/src/main/resources/application.yaml
+++ b/ftpClient/src/main/resources/application.yaml
@@ -19,6 +19,28 @@ ftp:
         directory: "/home/demo"
     local:
         directory: "src/main/resources/ftp/local"
+ftp1:
+    host: localhost
+    user: demo
+    pass: mysecretpassword123
+    port: 21
+    client:
+        mode: 2 #ACTIVE_LOCAL_DATA_CONNECTION_MODE = 0, PASSIVE_LOCAL_DATA_CONNECTION_MODE = 2
+    remote:
+        directory: "/home/demo"
+    local:
+        directory: "src/main/resources/ftp1/local"
+ftp2:
+    host: localhost
+    user: demo
+    pass: secret1234
+    port: 990
+    client:
+        mode: 2 #ACTIVE_LOCAL_DATA_CONNECTION_MODE = 0, PASSIVE_LOCAL_DATA_CONNECTION_MODE = 2
+    remote:
+        directory: "/"
+    local:
+        directory: "src/main/resources/ftp2/local"
 
 logging:
     level:
