--- a/ftpsServer/pom.xml
+++ b/ftpsServer/pom.xml
@@ -25,7 +25,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- FTP Apache Mina dependency -->
+		<!-- FTP server dependency -->
 		<dependency>
 			<groupId>org.apache.ftpserver</groupId>
 			<artifactId>ftpserver-core</artifactId>
